--- a/Day 11/css/style.css
+++ b/Day 11/css/style.css
@@ -1,7 +1,7 @@
 /* General Styling */
 
 body {
-  font-family: 'Lora', 'Times New Roman', serif;
+  font-family: Lora, 'Times New Roman', serif;
   font-size: 20px;
   color: rgb(51, 51, 51);
   margin: 0;
@@ -46,9 +46,7 @@ img, video {
 }
 
 main {
-  margin: auto;
-  margin-top: 80px;
-  margin-bottom: 80px;
+  margin: 80px auto;
   width: 50%;
 }
 
@@ -58,13 +56,12 @@ main {
   font-size: 25px;
   float: left;
   padding: 11px 13px;
-  font-weight: 1000;
+  font-weight: 900;
 }
 
 nav ul {
   margin: 0;
   padding: 0;
-  overflow: hidden;
   display: flex;
   justify-content: flex-end;
 }
@@ -72,14 +69,12 @@ nav ul {
 nav li {
   list-style-type: none;
   float: right;
-  display: list-item; 
 }
 
 nav li a {
   display: block;
   text-align: center;
   padding: 14px 16px;
-  text-decoration: none;
 }
 
 nav li a:hover, .active {
@@ -94,8 +89,8 @@ header {
   font-size: 20px;
   padding: 100px 0;
   text-align: center;
-  background-position: center; /* Center the image */
-  background-repeat: no-repeat; /* Do not repeat the image */
+  background-position: center; /* Center the background image */
+  background-repeat: no-repeat; /* Do not repeat the background image */
   background-size: cover; /* Resize the background image to cover the entire container */
 }
 
